--- a/pom.xml
+++ b/pom.xml
@@ -182,6 +182,14 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.31</version>
         </dependency>
+        
+        <dependency>
+    		<groupId>org.apache.commons</groupId>
+    		<artifactId>commons-dbcp2</artifactId>
+    		<version>2.9.0</version>
+		</dependency>
+   
+        
 <!-- 
         <dependency>
             <groupId>ojdbc</groupId>
