--- a/pom.xml
+++ b/pom.xml
@@ -158,7 +158,7 @@
 			<version>2.15.2</version>
 		</dependency>
 		  
-        <!-- mysql이나 oracle DB 사용시 아래 설정 추가
+        <!-- mysql이나 oracle DB 사용시 아래 설정 추가  -->
         <dependency>
             <groupId>com.googlecode.log4jdbc</groupId>
             <artifactId>log4jdbc</artifactId>
@@ -176,7 +176,6 @@
             <artifactId>commons-dbcp</artifactId>
             <version>1.4</version>
         </dependency>
--->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
@@ -190,7 +189,6 @@
 		</dependency>
    
         
-<!-- 
         <dependency>
             <groupId>ojdbc</groupId>
             <artifactId>ojdbc</artifactId>
@@ -198,7 +196,6 @@
             <scope>system</scope>
             <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/ojdbc-14.jar</systemPath>
         </dependency>
-        -->
 	</dependencies>
 
 	<build>
